--- a/web/vue/7.指令v-if/index.html
+++ b/web/vue/7.指令v-if/index.html
@@ -11,13 +11,13 @@
         <button v-on:click="error = !error">Toggle Error</button>
         <button v-on:click="success = !success">Toggle Success</button>
 
-        <p v-if="error">网络连接错误：404</p>
-        <p v-else-if="success">网络连接成功：200</p>
+        <p v-if="error">v-if 网络连接错误：404</p>
+        <p v-else-if="success">v-if 网络连接成功：200</p>
         <p v-else>哈哈</p>
 
         <!-- 标签一直存在，利用display属性控制是否显示 -->
-        <p v-show="error">网络连接错误：404</p>
-        <p v-show="success">网络连接成功：200</p>
+        <p v-show="error">v-show 网络连接错误：404</p>
+        <p v-show="success">v-show 网络连接成功：200</p>
     </div>
     <script src="app.js"></script>
 </body>
