--- a/web/vue/4.双向数据绑定/index.html
+++ b/web/vue/4.双向数据绑定/index.html
@@ -10,13 +10,13 @@
         <h1>双向数据绑定</h1>
         <label >姓名:</label>
         <!-- <input ref="nameInput" type="text" v-on:keyup="showName"> -->
-        <input ref="nameInput" type="text" v-model="name">
+        <input type="text" v-model="name">
         <span>{{name}}</span>
         <br>
 
         <label >年龄:</label>
         <!-- <input ref="ageInput" type="text" v-on:keyup="showAge"> -->
-        <input ref="ageInput" type="text" v-model="age">
+        <input type="text" v-model="age">
         <span>{{age}}</span>
     </div>
     <script src="app.js"></script>
